--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.12"
 pytest = "^8.2.1"
 pytest-golden = "^0.2.2"
+coverage = "^7.2.7"
+mypy = "^1.4.1"
+ruff = "^0.1.3"
 
 
 [build-system]
