--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -28,3 +28,28 @@ jobs:
 
       - name: Ruff linters run
         run: poetry run ruff check .
+
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Python
+        uses: action/setup-python@v4
+        with:
+          python-version: 3.12.3
+
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          pip3 install poetry
+          poetry install
+
+      - name: Run tests and get coverage
+        run: |
+          poetry run coverage run -m pytest
+          poetry run coverage report -m
+        env:
+          CI: true
