--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Python
-        uses: action/setup-python@v4
+        uses: actions/setup-python@v4
         with:
           python-version: 3.12.3
 
