updated CI config

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Run tests and get coverage
         run: |
           poetry run pytest . -v
-          poetry run coverage run -m pytest
-          poetry run coverage report -m
+          poetry run coverage run -m pytest -v
+          poetry run coverage report -m -v
         env:
           CI: true
