changed pytest CI config commands

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -49,8 +49,7 @@ jobs:
 
       - name: Run tests and get coverage
         run: |
-          poetry run pytest . -v
-          poetry run coverage run -m pytest -v
-          poetry run coverage report -m -v
+          poetry run coverage run -m pytest . -v
+          poetry run coverage report -m
         env:
           CI: true
